fix blob gradient on iphone

--- a/index.css
+++ b/index.css
@@ -990,6 +990,7 @@ display: block;
 		right: -63px;
 		opacity: 0.6;
 		top: 15px;
+		position: absolute;
 	}
 
 	.blob-02 {
